# plane.rs

./: .editorconfig  .gitignore  Cargo.toml  notes.txt
crates/plugin/: Cargo.toml
crates/plugin/src/: main.rs
src/: body_parser.rs  enums.rs  error.rs  init.rs  lib.rs  main.rs  request.rs  route.rs  server.rs  server_config.rs  structs.rs  traits.rs
src/config/: config.rs  errors.rs  mod.rs  server_config.rs  server_config_test.rs
src/enums/: config.rs  errors.rs  ip.rs  request_opts.rs
src/request/: errors.rs  headers.rs  headers_test.rs  mod.rs  request.rs  request_parser.rs  request_test.rs
src/request/headers/: encoding.rs  encoding_test.rs  http_version.rs  http_version_test.rs  locale.rs  locale_test.rs  method.rs  method_test.rs  mime_types.rs  mime_types_test.rs
src/response/: mod.rs  response.rs  response_codes.rs  server.rs
src/routing/: errors.rs  mod.rs  route.rs  route_test.rs
src/structs/: config.rs  config_impl.rs  request.rs  response.rs  route.rs  route_impl.rs  server.rs  server_impl.rs  tcp_parser.rs
src/traits/: validate.rs
test_data/: req1.txt
test_data/headers/: encodings.txt  locale.txt  mime.txt  mixed.txt  user-agent.txt
test_data/requests/: req1.txt
