[package]
 edition = "2021"
 name    = "plane_rs"
 version = "0.1.0"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 anyhow    = { version = "1.0.71", features = [] }
 http      = "0.2.9"
 itertools = "0.10.5"
mime = "0.3.17"
 strum     = { version = "0.24.1", features = ["derive", "phf"] }
 thiserror = { version = "1.0.40", features = [] }
