[package]
 edition = "2021"
 name    = "plane_rs"
 version = "0.1.0"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 anyhow = { version = "1.0.71", features = [] }
 http   = "0.2.9"
 mime   = "0.3.17"
 #  test-log           = { version = "0.2.11", features = ["tracing"] }
 thiserror          = { version = "1.0.40", features = [] }
 tokio              = { version = "1", features = ["full"] }
 tracing            = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = "0.3.17"
 tracing-timing     = "0.6.0"
